improve JPQLs and optimize queries in game and chat server; sync player through FTPlayer; replace/refactor Player entity usage to FTPlayer session object