@@ -4,6 +4,7 @@ import com.jftse.emulator.common.scripting.ScriptManager;
 import com.jftse.emulator.common.scripting.ScriptManagerFactory;
 import com.jftse.emulator.common.service.ConfigService;
 import com.jftse.emulator.common.utilities.StringUtils;
+import com.jftse.emulator.server.core.client.FTPlayer;
 import com.jftse.emulator.server.core.constants.ChatMode;
 import com.jftse.emulator.server.core.life.event.GameEventBus;
 import com.jftse.emulator.server.core.life.event.GameEventType;
@@ -16,6 +17,7 @@ import com.jftse.emulator.server.net.FTClient;
 import com.jftse.emulator.server.net.FTConnection;
 import com.jftse.entities.database.model.ServerType;
 import com.jftse.entities.database.model.Uptime;
+import com.jftse.entities.database.model.guild.Guild;
 import com.jftse.entities.database.model.guild.GuildMember;
 import com.jftse.entities.database.model.home.AccountHome;
 import com.jftse.entities.database.model.messenger.Friend;
@@ -44,7 +46,6 @@ import javax.annotation.PostConstruct;
 import java.net.InetSocketAddress;
 import java.util.*;
 import java.util.concurrent.*;
-import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
@@ -201,7 +202,7 @@ public class GameManager implements ServerLoopHandler {
         rooms.remove(room);
     }
 
-    public List<Player> getPlayersInLobby() {
+    public List<FTPlayer> getPlayersInLobby() {
         return clients.stream()
                 .filter(FTClient::isInLobby)
                 .map(FTClient::getPlayer)
@@ -222,7 +223,7 @@ public class GameManager implements ServerLoopHandler {
 
     public final FTConnection getConnectionByPlayerId(Long playerId) {
         return clients.stream()
-                .filter(c -> c.getPlayer() != null && c.getPlayer().getId().equals(playerId))
+                .filter(c -> c.hasPlayer() && playerId.equals(c.getPlayer().getId()))
                 .findFirst()
                 .map(FTClient::getConnection)
                 .orElse(null);
@@ -250,7 +251,7 @@ public class GameManager implements ServerLoopHandler {
 
     public synchronized void handleChatLobbyJoin(FTClient client) {
         FTConnection connection = client.getConnection();
-        if (connection == null) {
+        if (connection == null || !client.hasPlayer()) {
             return;
         }
 
@@ -258,15 +259,10 @@ public class GameManager implements ServerLoopHandler {
             return;
         }
 
-        Player player = client.getPlayer();
+        FTPlayer player = client.getPlayer();
 
         S2CRoomJoinAnswerPacket roomJoinAnswerPacket = new S2CRoomJoinAnswerPacket((char) 0, townSquare.getRoomType(), townSquare.getMode(), townSquare.getMap());
         connection.sendTCP(roomJoinAnswerPacket);
-
-        if (player == null) {
-            client.getIsJoiningOrLeavingLobby().set(false);
-            return;
-        }
 
         final ConcurrentLinkedDeque<RoomPlayer> roomPlayerList = townSquare.getRoomPlayerList();
         boolean anyPositionAvailable = roomPlayerList.size() < townSquare.getPlayers();
@@ -301,30 +297,22 @@ public class GameManager implements ServerLoopHandler {
             return;
         }
 
-        RoomPlayer roomPlayer = new RoomPlayer();
-        roomPlayer.setPlayerId(player.getId());
+        Friend couple = serviceManager.getSocialService().getRelationshipWithFriend(player.getPlayerRef());
+        if (couple != null) {
+            player.setCoupleId(couple.getFriend().getId());
+            player.setCoupleName(couple.getFriend().getName());
+        }
 
-        GuildMember guildMember = ServiceManager.getInstance().getGuildMemberService().getByPlayer(player);
-        Friend couple = ServiceManager.getInstance().getSocialService().getRelationship(player);
-        ClothEquipment clothEquipment = ServiceManager.getInstance().getClothEquipmentService().findClothEquipmentById(player.getClothEquipment().getId());
-        SpecialSlotEquipment specialSlotEquipment = ServiceManager.getInstance().getSpecialSlotEquipmentService().findById(player.getSpecialSlotEquipment().getId());
-        CardSlotEquipment cardSlotEquipment = ServiceManager.getInstance().getCardSlotEquipmentService().findById(player.getCardSlotEquipment().getId());
-        StatusPointsAddedDto statusPointsAddedDto = ServiceManager.getInstance().getClothEquipmentService().getStatusPointsFromCloths(player);
-
-        roomPlayer.setGuildMemberId(guildMember == null ? null : guildMember.getId());
-        roomPlayer.setCoupleId(couple == null ? null : couple.getId());
-        roomPlayer.setClothEquipmentId(clothEquipment.getId());
-        roomPlayer.setSpecialSlotEquipmentId(specialSlotEquipment.getId());
-        roomPlayer.setCardSlotEquipmentId(cardSlotEquipment.getId());
-        roomPlayer.setStatusPointsAddedDto(statusPointsAddedDto);
+        RoomPlayer roomPlayer = new RoomPlayer(player);
+        roomPlayer.setGameMaster(client.isGameMaster());
         roomPlayer.setPosition(position);
         roomPlayer.setMaster(false);
         roomPlayer.setFitting(false);
 
-        townSquare.getRoomPlayerList().add(roomPlayer);
-
         client.setActiveRoom(townSquare);
         client.setInLobby(true);
+
+        townSquare.getRoomPlayerList().add(roomPlayer);
 
         S2CRoomInformationPacket roomInformationPacket = new S2CRoomInformationPacket(townSquare);
         connection.sendTCP(roomInformationPacket);
@@ -354,7 +342,7 @@ public class GameManager implements ServerLoopHandler {
         clientsInLobby.forEach(c -> {
             if (c.getConnection() != null) {
                 final int currentPage = c.getLobbyCurrentPlayerListPage();
-                final List<Player> playersInLobby = getPlayersInLobby().stream()
+                final List<FTPlayer> playersInLobby = getPlayersInLobby().stream()
                         .skip(currentPage == 1 ? 0 : (currentPage * 10L) - 10)
                         .limit(10)
                         .collect(Collectors.toList());
@@ -366,12 +354,10 @@ public class GameManager implements ServerLoopHandler {
 
     public synchronized void handleRoomPlayerChanges(final FTConnection connection, final boolean notifyClients) {
         FTClient client = connection.getClient();
-        if (client == null)
+        if (!client.hasPlayer())
             return;
 
-        Player activePlayer = client.getPlayer();
-        if (activePlayer == null)
-            return;
+        FTPlayer activePlayer = client.getPlayer();
 
         Room room = client.getActiveRoom();
         if (room == null)
@@ -395,7 +381,7 @@ public class GameManager implements ServerLoopHandler {
                         S2CLeaveRoomWithPositionPacket leaveRoomWithPositionPacket = new S2CLeaveRoomWithPositionPacket(cRP.getPosition());
                         ftConnection.sendTCP(leaveRoomWithPositionPacket);
 
-                        if (!cRP.getPlayerId().equals(client.getActivePlayerId())) {
+                        if (cRP.getPlayerId() != activePlayer.getId()) {
                             ftConnection.sendTCP(roomLeaveAnswer);
                         }
                     }
@@ -409,7 +395,7 @@ public class GameManager implements ServerLoopHandler {
             }
         }
 
-        roomPlayerList.removeIf(rp -> rp.getPlayerId().equals(activePlayer.getId()));
+        roomPlayerList.removeIf(rp -> rp.getPlayerId() == activePlayer.getId());
         if (roomPlayerList.isEmpty() && room.getMode() != 2) {
             removeRoom(room);
         }
@@ -468,24 +454,17 @@ public class GameManager implements ServerLoopHandler {
     public synchronized void internalHandleRoomCreate(final FTConnection connection, Room room) {
         room.setAllowBattlemon((byte) 0);
 
-        Player activePlayer = connection.getClient().getPlayer();
+        FTClient client = connection.getClient();
+        FTPlayer activePlayer = client.getPlayer();
 
-        RoomPlayer roomPlayer = new RoomPlayer();
-        roomPlayer.setPlayerId(activePlayer.getId());
+        Friend couple = serviceManager.getSocialService().getRelationshipWithFriend(activePlayer.getPlayerRef());
+        if (couple != null) {
+            activePlayer.setCoupleId(couple.getFriend().getId());
+            activePlayer.setCoupleName(couple.getFriend().getName());
+        }
 
-        GuildMember guildMember = serviceManager.getGuildMemberService().getByPlayer(activePlayer);
-        Friend couple = serviceManager.getSocialService().getRelationship(activePlayer);
-        ClothEquipment clothEquipment = serviceManager.getClothEquipmentService().findClothEquipmentById(roomPlayer.getPlayer().getClothEquipment().getId());
-        SpecialSlotEquipment specialSlotEquipment = serviceManager.getSpecialSlotEquipmentService().findById(roomPlayer.getPlayer().getSpecialSlotEquipment().getId());
-        CardSlotEquipment cardSlotEquipment = serviceManager.getCardSlotEquipmentService().findById(roomPlayer.getPlayer().getCardSlotEquipment().getId());
-        StatusPointsAddedDto statusPointsAddedDto = serviceManager.getClothEquipmentService().getStatusPointsFromCloths(roomPlayer.getPlayer());
-
-        roomPlayer.setGuildMemberId(guildMember == null ? null : guildMember.getId());
-        roomPlayer.setCoupleId(couple == null ? null : couple.getId());
-        roomPlayer.setClothEquipmentId(clothEquipment.getId());
-        roomPlayer.setSpecialSlotEquipmentId(specialSlotEquipment.getId());
-        roomPlayer.setCardSlotEquipmentId(cardSlotEquipment.getId());
-        roomPlayer.setStatusPointsAddedDto(statusPointsAddedDto);
+        RoomPlayer roomPlayer = new RoomPlayer(activePlayer);
+        roomPlayer.setGameMaster(client.isGameMaster());
         roomPlayer.setPosition((short) 0);
         roomPlayer.setMaster(true);
         roomPlayer.setFitting(false);
@@ -496,7 +475,7 @@ public class GameManager implements ServerLoopHandler {
             spawnX = rnd.nextFloat(10.0f, 21.0f);
             spawnY = rnd.nextFloat(15.0f, 50.0f);
         } else if (room.getMode() == 1) {
-            AccountHome accountHome = serviceManager.getHomeService().findAccountHomeByAccountId(activePlayer.getAccount().getId());
+            AccountHome accountHome = serviceManager.getHomeService().findAccountHomeByAccountId(client.getAccountId());
 
             spawnX = switch (accountHome.getLevel()) {
                 case 3, 4 -> 10.0f;
@@ -517,11 +496,12 @@ public class GameManager implements ServerLoopHandler {
         roomPlayer.setLastY(spawnY);
         roomPlayer.setLastMapLayer(0);
 
+        connection.getClient().setActiveRoom(room);
+        connection.getClient().setInLobby(false);
+
         room.getRoomPlayerList().add(roomPlayer);
 
         addRoom(room);
-        connection.getClient().setActiveRoom(room);
-        connection.getClient().setInLobby(false);
 
         S2CRoomCreateAnswerPacket roomCreateAnswerPacket = new S2CRoomCreateAnswerPacket((char) 0, room.getRoomType(), room.getMode(), room.getMap());
         S2CRoomInformationPacket roomInformationPacket = new S2CRoomInformationPacket(room);
@@ -553,10 +533,15 @@ public class GameManager implements ServerLoopHandler {
     }
 
     public GuildMember getGuildMemberByPlayerPositionInGuild(int playerPositionInGuild, final GuildMember guildMember) {
-        final List<GuildMember> memberList = guildMember.getGuild().getMemberList().stream()
+        Guild guild = serviceManager.getGuildService().findWithMembersById(guildMember.getGuild().getId());
+        return getGuildMemberByPlayerPositionInGuild(guild, playerPositionInGuild);
+    }
+
+    public GuildMember getGuildMemberByPlayerPositionInGuild(Guild guild, int playerPositionInGuild) {
+        final List<GuildMember> memberList = guild.getMemberList().stream()
                 .filter(x -> !x.getWaitingForApproval())
                 .sorted(Comparator.comparing(GuildMember::getMemberRank).reversed())
-                .collect(Collectors.toList());
+                .toList();
         if (memberList.size() < playerPositionInGuild) {
             return null;
         }
@@ -584,13 +569,18 @@ public class GameManager implements ServerLoopHandler {
 
         for (FTClient client : clients) {
             FTConnection connection = client.getConnection();
-            if (connection != null && !connection.update(diff)) {
+            if (connection == null || !connection.update(diff)) {
                 removeClient(client);
             }
         }
     }
 
     private void initializeConnection(FTConnection conn) {
+        if (conn.getClient() != null) {
+            log.warn("({}) Connection already has a client assigned", conn.getIPString());
+            return;
+        }
+
         InetSocketAddress inetSocketAddress = conn.getRemoteAddressTCP();
         String remoteAddress = inetSocketAddress != null ? inetSocketAddress.toString() : "null";
 
