@@ -1,5 +1,6 @@
 package com.jftse.emulator.server.core.handler.lobby.room;
 
+import com.jftse.emulator.server.core.client.FTPlayer;
 import com.jftse.emulator.server.core.constants.MiscConstants;
 import com.jftse.emulator.server.core.constants.RoomStatus;
 import com.jftse.emulator.server.core.life.room.Room;
@@ -7,15 +8,11 @@ import com.jftse.emulator.server.core.life.room.RoomPlayer;
 import com.jftse.emulator.server.core.manager.ServiceManager;
 import com.jftse.emulator.server.core.packets.lobby.room.S2CRoomInformationPacket;
 import com.jftse.emulator.server.core.packets.lobby.room.S2CRoomPlayerListInformationPacket;
-import com.jftse.emulator.server.core.packets.player.S2CCouplePointsDataPacket;
 import com.jftse.emulator.server.core.packets.player.S2CPlayerInfoPlayStatsPacket;
 import com.jftse.emulator.server.core.packets.player.S2CPlayerStatusPointChangePacket;
-import com.jftse.emulator.server.core.service.impl.ClothEquipmentServiceImpl;
 import com.jftse.emulator.server.net.FTClient;
 import com.jftse.emulator.server.net.FTConnection;
-import com.jftse.entities.database.model.player.Player;
 import com.jftse.entities.database.model.player.PlayerStatistic;
-import com.jftse.entities.database.model.player.StatusPointsAddedDto;
 import com.jftse.server.core.handler.PacketHandler;
 import com.jftse.server.core.handler.PacketId;
 import com.jftse.server.core.protocol.Packet;
@@ -23,30 +20,28 @@ import com.jftse.server.core.protocol.PacketOperations;
 import com.jftse.server.core.service.PlayerStatisticService;
 import com.jftse.server.core.shared.packets.lobby.room.CMSGClientBackInRoom;
 import com.jftse.server.core.shared.packets.lobby.room.SMSGClientBackInRoom;
+import com.jftse.server.core.shared.packets.player.SMSGSetCouplePoints;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @PacketId(CMSGClientBackInRoom.PACKET_ID)
 public class ClientBackInRoomPacketHandler implements PacketHandler<FTConnection, CMSGClientBackInRoom> {
     private final PlayerStatisticService playerStatisticService;
-    private final ClothEquipmentServiceImpl clothEquipmentService;
 
     public ClientBackInRoomPacketHandler() {
         playerStatisticService = ServiceManager.getInstance().getPlayerStatisticService();
-        clothEquipmentService = ServiceManager.getInstance().getClothEquipmentService();
     }
 
     @Override
     public void handle(FTConnection connection, CMSGClientBackInRoom packet) {
         FTClient client = connection.getClient();
-        if (client == null || client.getPlayer() == null) {
-            connection.close();
+        if (!client.hasPlayer()) {
+            connection.close(); // ??
             return;
         }
 
-        Player player = client.getPlayer();
+        FTPlayer player = client.getPlayer();
 
         Room currentClientRoom = client.getActiveRoom();
         RoomPlayer roomPlayer = client.getRoomPlayer();
@@ -72,25 +67,21 @@ public class ClientBackInRoomPacketHandler implements PacketHandler<FTConnection
             currentClientRoom.setStatus(RoomStatus.NotRunning);
         }
 
-        PlayerStatistic playerStatistic = playerStatisticService.findPlayerStatisticById(player.getPlayerStatistic().getId());
-        player.setPlayerStatistic(playerStatistic);
-        client.savePlayer(player);
+        PlayerStatistic playerStatistic = playerStatisticService.findPlayerStatisticById(player.getPlayerStatisticId());
 
-        StatusPointsAddedDto statusPointsAddedDto = clothEquipmentService.getStatusPointsFromCloths(player);
-
-        S2CCouplePointsDataPacket couplePointsDataPacket = new S2CCouplePointsDataPacket(player.getCouplePoints());
-        S2CPlayerStatusPointChangePacket playerStatusPointChangePacket = new S2CPlayerStatusPointChangePacket(player, statusPointsAddedDto);
+        SMSGSetCouplePoints couplePointsPacket = SMSGSetCouplePoints.builder().amount(player.getCouplePoints()).build();
+        S2CPlayerStatusPointChangePacket playerStatusPointChangePacket = new S2CPlayerStatusPointChangePacket(player);
         S2CPlayerInfoPlayStatsPacket playerInfoPlayStatsPacket = new S2CPlayerInfoPlayStatsPacket(playerStatistic);
         S2CRoomInformationPacket roomInformationPacket = new S2CRoomInformationPacket(currentClientRoom);
         S2CRoomPlayerListInformationPacket roomPlayerInformationPacket = new S2CRoomPlayerListInformationPacket(new ArrayList<>(currentClientRoom.getRoomPlayerList()));
 
         List<RoomPlayer> filteredRoomPlayerList = currentClientRoom.getRoomPlayerList().stream()
                 .filter(x -> x.getPosition() != MiscConstants.InvisibleGmSlot)
-                .collect(Collectors.toList());
+                .toList();
         S2CRoomPlayerListInformationPacket roomPlayerInformationPacketWithoutInvisibleGm =
                 new S2CRoomPlayerListInformationPacket(new ArrayList<>(filteredRoomPlayerList));
 
-        connection.sendTCP(couplePointsDataPacket);
+        connection.sendTCP(couplePointsPacket);
         connection.sendTCP(playerStatusPointChangePacket, playerInfoPlayStatsPacket);
         connection.sendTCP(roomInformationPacket, position == MiscConstants.InvisibleGmSlot ? roomPlayerInformationPacket : roomPlayerInformationPacketWithoutInvisibleGm);
     }
