@@ -28,7 +28,6 @@ import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
-@Transactional(isolation = Isolation.SERIALIZABLE)
 public class PlayerPocketServiceImpl implements PlayerPocketService {
     private final Logger log = LogManager.getLogger(PlayerPocketServiceImpl.class);
 
@@ -42,43 +41,79 @@ public class PlayerPocketServiceImpl implements PlayerPocketService {
     private final JdbcUtil jdbcUtil;
 
     @Override
+    @Transactional(readOnly = true)
     public PlayerPocket getItemAsPocket(Long itemPocketId, Pocket pocket) {
         Optional<PlayerPocket> playerPocket = playerPocketRepository.findByIdAndPocket(itemPocketId, pocket);
         return playerPocket.orElse(null);
     }
 
     @Override
+    @Transactional(readOnly = true)
+    public PlayerPocket getItemAsPocket(Long itemPocketId, Long pocketId) {
+        return playerPocketRepository.findByIdAndPocketId(itemPocketId, pocketId).orElse(null);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<PlayerPocket> getItemsAsPocket(List<Long> itemPocketIds, Pocket pocket) {
+        return playerPocketRepository.findAllByPocketAndIdIn(pocket, itemPocketIds);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<PlayerPocket> getItemsAsPocketByItemIndex(List<Integer> itemIndices, Pocket pocket) {
+        return playerPocketRepository.findAllByPocketAndItemIndexIn(pocket, itemIndices);
+    }
+
+    @Override
+    @Transactional(isolation = Isolation.READ_COMMITTED)
     public PlayerPocket getItemAsPocketByItemIndexAndCategoryAndPocket(Integer itemIndex, String category, Pocket pocket) {
         List<PlayerPocket> playerPocketList = playerPocketRepository.findAllByItemIndexAndCategoryAndPocket(itemIndex, category, pocket);
         return getPlayerPocketAndHandleDuplicates(playerPocketList);
     }
 
+    @Override
+    @Transactional(isolation = Isolation.READ_COMMITTED)
+    public PlayerPocket getItemAsPocketByItemIndexAndCategoryAndPocket(Integer itemIndex, String category, Long pocketId) {
+        List<PlayerPocket> playerPocketList = playerPocketRepository.findAllByItemIndexAndCategoryAndPocketId(itemIndex, category, pocketId);
+        return getPlayerPocketAndHandleDuplicates(playerPocketList);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<PlayerPocket> getItemsAsPocketByItemIndexListAndCategoryAndPocket(List<Integer> itemIndexList, String category, Pocket pocket) {
+        return playerPocketRepository.findAllByPocketAndCategoryAndItemIndexIn(pocket, category, itemIndexList);
+    }
+
     private PlayerPocket getPlayerPocketAndHandleDuplicates(List<PlayerPocket> playerPocketList) {
         PlayerPocket playerPocket = null;
         if (playerPocketList.size() >= 1) {
-            playerPocket = playerPocketList.get(0);
+            playerPocket = playerPocketList.getFirst();
 
             for (int i = 1; i < playerPocketList.size(); i++) {
                 if (playerPocketList.get(i).getCategory().equals(EItemCategory.PARTS.getName()))
-                    this.remove(playerPocketList.get(i).getId());
+                    playerPocketRepository.deleteById(playerPocketList.get(i).getId());
             }
         }
         return playerPocket;
     }
 
     @Override
+    @Transactional(readOnly = true)
     public PlayerPocket findById(Long id) {
         Optional<PlayerPocket> playerPocket = playerPocketRepository.findById(id);
         return playerPocket.orElse(null);
     }
 
     @Override
+    @Transactional(isolation = Isolation.READ_COMMITTED)
     public List<PlayerPocket> getPlayerPocketItems(Pocket pocket) {
         List<PlayerPocket> playerPocketItems = playerPocketRepository.findAllByPocket(pocket);
         return filterExpiredItems(playerPocketItems, pocket);
     }
 
     @Override
+    @Transactional(isolation = Isolation.READ_COMMITTED)
     public List<PlayerPocket> getPlayerPocketItemsByCategory(Pocket pocket, String category) {
         List<PlayerPocket> playerPocketItems = playerPocketRepository.findAllByPocketAndCategory(pocket, category);
         return filterExpiredItems(playerPocketItems, pocket);
@@ -90,7 +125,7 @@ public class PlayerPocketServiceImpl implements PlayerPocketService {
         long now = new Date().getTime();
         for (PlayerPocket item : playerPocketItems) {
             if (((item.getCreated().getTime() * 10000) - (now * 10000) <= 0) && item.getUseType().equalsIgnoreCase(EItemUseType.TIME.getName())) {
-                remove(item.getId());
+                playerPocketRepository.deleteById(item.getId());
                 pocket = pocketService.decrementPocketBelongings(pocket);
                 continue;
             }
@@ -100,6 +135,7 @@ public class PlayerPocketServiceImpl implements PlayerPocketService {
     }
 
     @Override
+    @Transactional(readOnly = true)
     public int getSellPrice(PlayerPocket playerPocket) {
         int itemCount = playerPocket.getItemCount();
 
@@ -107,11 +143,11 @@ public class PlayerPocketServiceImpl implements PlayerPocketService {
 
         if (playerPocket.getCategory().equals(EItemCategory.MATERIAL.getName())) {
             List<Integer> sellPriceResult = itemMaterialRepository.getItemSellPriceByItemIndex(playerPocket.getItemIndex());
-            sellPrice = sellPriceResult.get(0) * itemCount;
+            sellPrice = sellPriceResult.getFirst() * itemCount;
         }
         else if (playerPocket.getCategory().equals(EItemCategory.ENCHANT.getName())) {
             List<Integer> sellPriceResult = itemEnchantRepository.getItemSellPriceByItemIndex(playerPocket.getItemIndex());
-            sellPrice = sellPriceResult.get(0) * itemCount;
+            sellPrice = sellPriceResult.getFirst() * itemCount;
         }
         else { // everything else buy price / 2
             List<Product> products = productRepository.findProductsByItem0AndCategory(playerPocket.getItemIndex(), playerPocket.getCategory());
@@ -143,6 +179,7 @@ public class PlayerPocketServiceImpl implements PlayerPocketService {
     }
 
     @Override
+    @Transactional(isolation = Isolation.READ_COMMITTED)
     public PlayerPocket decrementPocketItemCount(PlayerPocket playerPocket) {
         Optional<PlayerPocket> tmpPocket = playerPocketRepository.findById(playerPocket.getId());
         if (tmpPocket.isPresent()) {
@@ -157,16 +194,19 @@ public class PlayerPocketServiceImpl implements PlayerPocketService {
     }
 
     @Override
+    @Transactional(isolation = Isolation.READ_COMMITTED)
     public PlayerPocket save(PlayerPocket playerPocket) {
         return playerPocketRepository.save(playerPocket);
     }
 
     @Override
+    @Transactional(isolation = Isolation.READ_COMMITTED)
     public List<PlayerPocket> saveAll(List<PlayerPocket> playerPockets) {
         return playerPocketRepository.saveAll(playerPockets);
     }
 
     @Override
+    @Transactional
     public void remove(Long playerPocketId) {
         playerPocketRepository.deleteById(playerPocketId);
     }
